Use fake server id

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-  <title>reveal.js</title>
+  <title>A better way to manage command line tools</title>
 
   <link rel="stylesheet" href="dist/reset.css">
   <link rel="stylesheet" href="dist/reveal.css">
@@ -201,16 +201,16 @@
             <div class="history">
               <div>
                 $&nbsp;<span class="prompt">remove-agents.sh</span><br>
-                <span class="fragment">Removing agent qtfckq9080893 ...</span><br>
-                <span class="fragment">Removing agent qtfckq91609d7 ...</span><br>
-                <span class="fragment">Removing agent qtfcts93400ba ...</span><br>
-                <span class="fragment">Removing agent qtfcts91501a5 ...</span><br>
-                <span class="fragment">Removing agent qtfckq9151306 ...</span><br>
-                <span class="fragment">Removing agent qtfckq85108c5 ...</span><br>
-                <span class="fragment">Removing agent qtfckq8130228 ...</span><br>
-                <span class="fragment">Removing agent qtfckq8150001 ...</span><br>
-                <span class="fragment">Removing agent qtfckq8150079 ...</span><br>
-                <span class="fragment">Removing agent qtfckq81500b1 ...</span><br>
+                <span class="fragment">Removing agent e3b82dd06757 ...</span><br>
+                <span class="fragment">Removing agent 98c24387ef40 ...</span><br>
+                <span class="fragment">Removing agent 821a1813ad56 ...</span><br>
+                <span class="fragment">Removing agent bdb68378edcf ...</span><br>
+                <span class="fragment">Removing agent 24856a0d2f04 ...</span><br>
+                <span class="fragment">Removing agent d26943e20b45 ...</span><br>
+                <span class="fragment">Removing agent 42e8d7611ac0 ...</span><br>
+                <span class="fragment">Removing agent e93d3965c037 ...</span><br>
+                <span class="fragment">Removing agent 7db950b3a410 ...</span><br>
+                <span class="fragment">Removing agent 75a34448c538 ...</span><br>
                 <span class="fragment">Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C
                   Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C </span><br><br>
                 <span class="fragment">Removed 230 agents ...</span><br>
@@ -236,16 +236,16 @@
               <div class="history">
                 <div>
                   $&nbsp;<span class="prompt">remove-agents.sh</span><br>
-                  <span>Removing agent qtfckq9080893 ...</span><br>
-                  <span>Removing agent qtfckq91609d7 ...</span><br>
-                  <span>Removing agent qtfcts93400ba ...</span><br>
-                  <span>Removing agent qtfcts91501a5 ...</span><br>
-                  <span>Removing agent qtfckq9151306 ...</span><br>
-                  <span>Removing agent qtfckq85108c5 ...</span><br>
-                  <span>Removing agent qtfckq8130228 ...</span><br>
-                  <span>Removing agent qtfckq8150001 ...</span><br>
-                  <span>Removing agent qtfckq8150079 ...</span><br>
-                  <span>Removing agent qtfckq81500b1 ...</span><br>
+                  <span>Removing agent e3b82dd06757 ...</span><br>
+                  <span>Removing agent 98c24387ef40 ...</span><br>
+                  <span>Removing agent 821a1813ad56 ...</span><br>
+                  <span>Removing agent bdb68378edcf ...</span><br>
+                  <span>Removing agent 24856a0d2f04 ...</span><br>
+                  <span>Removing agent d26943e20b45 ...</span><br>
+                  <span>Removing agent 42e8d7611ac0 ...</span><br>
+                  <span>Removing agent e93d3965c037 ...</span><br>
+                  <span>Removing agent 7db950b3a410 ...</span><br>
+                  <span>Removing agent 75a34448c538 ...</span><br>
                   <span>Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C
                     Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C Ctrl-C </span><br><br>
                   <span>Removed 230 agents ...</span><br>
@@ -312,13 +312,13 @@
 
       <!-- SaaS to rescue -->
       <section>
-        <h2 class="b-title">Software as a Service</h2>
+        <h2 style="font-weight:bold;">SaaS</h2>
         <ul>
-          <li>Applications are accessible from browsers, no installation required</li>
-          <li>Browser provides common function to your web application, and enables the new possibilities: progressive rollout, A/B testing ...</li>
+          <li>No installation</li>
+          <li>Functions integrated in browser</li>
           <li>Unified interface language: HTML & CSS</li>
-          <li>Still be able to build web application with preferred tech stack</li>
-          <li>Search engine indexes your web application for discovery</li>
+          <li>Discovery with search engine</li>
+          <li>Continuous Delivery</li>
         </ul>
 
       </section>
