--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
       <!-- SaaS to rescue -->
       <section>
-        <h2 style="font-weight:bold;">SaaS</h2>
+        <h2 style="font-weight:bold;">Software as a Service</h2>
         <ul>
           <li>No installation</li>
           <li>Functions integrated in browser</li>
@@ -942,10 +942,40 @@
         <a style="font-family:Menlo;font-size:48px;" href="https://github.com/criteo/command-launcher">https://github.com/criteo/command-launcher</a>
       </section>
 
-      <!-- End -->
       <section>
-        <h2 class="b-title">Thanks!</h2>
+        <div>
+          <div style="float:left;margin-left:50px;width:400px;">
+            <img class="r-stretch" style="border:0px solid;border-radius:50%;width:50%;" src="images/bo.png">
+            <p>
+              <span style="font-weight:bold;">BO HOU</span><br>
+              <span style="font-family:Menlo;font-weight:500; font-size: 24px;">twitter.com/bhoustudio</span><br>
+              <span style="font-family:Menlo;font-weight:500; font-size: 24px;">medium.com/@bohou</span>
+            </p>
+          </div>
+          <div style="float:left;width:400px;">
+            <!-- <img style="width:200px;" src="images/SRECON_amazing_contacts.png"> -->
+            <span style="font-size:195px;">🚀</span>
+            <p>
+              <span style="font-weight:bold;text-align:left;">Command Launcher</span><br>
+              <span style="font-family:Menlo;font-weight:500; font-size: 24px;">github.com/criteo/command-launcher</span><br>
+            </p>
+          </div>
+          <div style="float:left;width:400px;">
+            <img style="width:200px;" src="images/SRECON_amazing_contacts.png">
+            <p>
+              <span style="font-weight:bold;text-align:left;">Criteo Engineering</span><br>
+              <span style="font-family:Menlo;font-weight:500; font-size: 24px;">careers.criteo.com</span><br>
+              <span style="font-family:Menlo;font-weight:500; font-size: 24px;">medium.com/criteo-engineering</span><br>
+            </p>
+          </div>
+        </div>
       </section>
+
+
+      <!-- End -->
+      <!-- <section> -->
+      <!--   <h2 class="b-title">Thanks!</h2> -->
+      <!-- </section> -->
 
     </div>
   </div>
