Use rocket png file

--- a/index.html
+++ b/index.html
@@ -943,8 +943,8 @@
       </section>
 
       <section>
-        <div>
-          <div style="float:left;margin-left:50px;width:400px;">
+        <div style="width:100%;">
+          <div style="float:left;margin-top:150px;margin-left:50px;width:400px;">
             <img class="r-stretch" style="border:0px solid;border-radius:50%;width:50%;" src="images/bo.png">
             <p>
               <span style="font-weight:bold;">BO HOU</span><br>
@@ -952,15 +952,15 @@
               <span style="font-family:Menlo;font-weight:500; font-size: 24px;">medium.com/@bohou</span>
             </p>
           </div>
-          <div style="float:left;width:400px;">
+          <div style="float:left;margin-top:150px;width:400px;">
             <!-- <img style="width:200px;" src="images/SRECON_amazing_contacts.png"> -->
-            <span style="font-size:195px;">🚀</span>
+            <img class="r-stretch" style="border:0px solid;width:50%;" src="images/rocket.png">
             <p>
               <span style="font-weight:bold;text-align:left;">Command Launcher</span><br>
               <span style="font-family:Menlo;font-weight:500; font-size: 24px;">github.com/criteo/command-launcher</span><br>
             </p>
           </div>
-          <div style="float:left;width:400px;">
+          <div style="float:left;margin-top:150px;width:400px;">
             <img style="width:200px;" src="images/SRECON_amazing_contacts.png">
             <p>
               <span style="font-weight:bold;text-align:left;">Criteo Engineering</span><br>
@@ -969,6 +969,10 @@
             </p>
           </div>
         </div>
+        <div style="height:720px;">
+          <a href="https://www.flaticon.com/free-icons/rocket" title="rocket icons" style="position:absolute;bottom:0px;left:550px;font-size:10px;">Rocket icons created by Freepik - Flaticon</a>
+        </div>
+
       </section>
 
 
