--- a/index.html
+++ b/index.html
@@ -688,7 +688,8 @@
               <div class="button yellow"></div>
               <div class="button red"></div>
             </div>
-            <img style="width:600px;" src="images/auto-complete.gif">
+            <!-- <img style="width:600px;" src="images/auto-complete.gif"> -->
+            <img style="width:600px;" src="images/auto-complete.jpg">
           </div>
         </div>
       </section>
@@ -705,7 +706,8 @@
                   <div class="button yellow"></div>
                   <div class="button red"></div>
                 </div>
-                <img style="width:600px;" src="images/login.gif">
+                <!-- <img style="width:600px;" src="images/login.gif"> -->
+                <img style="width:600px;" src="images/login.jpg">
               </div>
             </div>
             <div class="fragment">
@@ -756,7 +758,8 @@
                   <div class="button yellow"></div>
                   <div class="button red"></div>
                 </div>
-                <img style="width:600px;" src="images/consent.gif">
+                <!-- <img style="width:600px;" src="images/consent.gif"> -->
+                <img style="width:600px;" src="images/consent.jpg">
               </div>
             </div>
           </div>
@@ -832,7 +835,8 @@
                 <div class="button yellow"></div>
                 <div class="button red"></div>
               </div>
-              <img style="width:600px;" src="images/auto-update.gif">
+              <!-- <img style="width:600px;" src="images/auto-update.gif"> -->
+              <img style="width:600px;" src="images/auto-update.jpg">
             </div>
           </div>
         </div>
